--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express-2": "tsc; node lib/node-express/server-2",
     "express-3": "tsc; node lib/node-express/server-3",
     "express-4": "tsc; node lib/node-express/server-4",
-    "a1": "tsc; node lib/a1/index"
+    "a1": "tsc; node lib/a1/index",
+    "mongodb": "tsc; node lib/node-mongodb/simple-server"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,14 @@
   "dependencies": {
     "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
+    "@types/mongodb": "^2.2.7",
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.9",
+    "@types/power-assert": "^1.4.29",
+    "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongodb": "^2.2.30",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
