--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "express-3": "tsc; node lib/node-express/server-3",
     "express-4": "tsc; node lib/node-express/server-4",
     "a1": "tsc; node lib/a1/index",
-    "mongodb": "tsc; node lib/node-mongodb/simple-server"
+    "mongodb": "tsc; node lib/node-mongodb/simple-server",
+    "mongoose-1": "tsc; node lib/node-mongoose/server-1",
+    "mongoose-2": "tsc; node lib/node-mongoose/server-2",
+    "mongoose-3": "tsc; node lib/node-mongoose/server-3"
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,7 @@
     "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
     "@types/mongodb": "^2.2.7",
+    "@types/mongoose": "^4.7.19",
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.9",
     "@types/power-assert": "^1.4.29",
@@ -34,6 +38,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
+    "mongoose": "^4.11.4",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
